Apex-161: Privacy policy page inside body content link color change.

--- a/source/themes/custom/campbell/styles/components/_privacy-policy.scss
+++ b/source/themes/custom/campbell/styles/components/_privacy-policy.scss
@@ -33,6 +33,11 @@
         }
       }
 
+      a {
+        color: $pantone;
+        text-decoration: underline;
+      }
+
       h4 {
         font-size: 16px;
         line-height: 16px;
