--- a/source/themes/custom/campbell/styles/components/_news.scss
+++ b/source/themes/custom/campbell/styles/components/_news.scss
@@ -4,6 +4,7 @@
   background: 0;
   border: 0;
   padding: 0;
+  margin: 20px 0;
 
   .form-wrapper {
     margin: 0;
@@ -59,6 +60,16 @@
       &:checked + label {
         color: $black;
       }
+    }
+  }
+}
+
+.campbell-news-release-page {
+  .view-content {
+    margin-bottom: 20px;
+
+    .views-row {
+      margin-bottom: 5px;
     }
   }
 }
