--- a/source/themes/custom/campbell/styles/components/_video-gallery.scss
+++ b/source/themes/custom/campbell/styles/components/_video-gallery.scss
@@ -69,6 +69,7 @@
     font-size: 30px;
     font-weight: $bold;
     color: $pantone;
+    margin-bottom: 20px;
 
     @media only screen and(max-width: $tablet) {
       font-size: 22px;
