feature/APEX-159: campbell- changed block weight and added page title

--- a/docroot/themes/custom/campbell/templates/views/views-view--campbell_news--campbell_in_the_news.html.twig
+++ b/docroot/themes/custom/campbell/templates/views/views-view--campbell_news--campbell_in_the_news.html.twig
@@ -39,8 +39,8 @@
   {% set content_classes = content_classes|merge(['view-empty']) %}
 {% endif %}
 
-
 <div class="wrapper-content">
+  <div class="page-title"> {{ view.title }} </div>
   {%
     set classes = [
       'view',
