--- a/docroot/themes/custom/campbell/templates/views/views-view-unformatted--videos--video_listing_page.html.twig
+++ b/docroot/themes/custom/campbell/templates/views/views-view-unformatted--videos--video_listing_page.html.twig
@@ -18,6 +18,7 @@
  */
 #}
 <div class="wrapper-content">
+  <div class="page-title">{{ view.getTitle() }}</div>
   <div class="video-gallery">
     {% for row in rows %}
       {% set row_classes = [
