--- a/docroot/themes/custom/cleco/src/scss/base/_media.scss
+++ b/docroot/themes/custom/cleco/src/scss/base/_media.scss
@@ -58,6 +58,12 @@ figcaption {
 [data-align='right'] {
   margin-left: 1em * $line-height-default;
   float: right;
+  @media only screen and (max-width: $media-screen-mobile) {
+    float: left;
+    width: 100%;
+    margin: 16px 0;
+    max-width: 100%;
+  }
 }
 
 .align-center,
