feature/APEX-159: campbell- news page title issue

--- a/docroot/themes/custom/campbell/templates/views/views-view--campbell_news--campbell_news_release.html.twig
+++ b/docroot/themes/custom/campbell/templates/views/views-view--campbell_news--campbell_news_release.html.twig
@@ -41,7 +41,6 @@
 
 
 <div class="wrapper-content">
-  <div class="page-title"> {{ view.title }} </div>
   {%
     set classes = [
       'view',
@@ -52,12 +51,9 @@
     ]
   %}
   <div{{ attributes.addClass(classes) }}>
-    {{ title_prefix }}
-    {% if title %}
-      {{- title -}}
-    {% endif %}
-    {{ title_suffix }}
-    
+    <div class="page-title">
+      {{ view.title }}
+    </div>
     {% if exposed %}
       <div class="view-filters tab-filters">
         {{ exposed }}
