feature/APEX-159:CAMPBELL -news-issue

--- a/source/themes/custom/campbell/styles/components/_news.scss
+++ b/source/themes/custom/campbell/styles/components/_news.scss
@@ -286,6 +286,8 @@
     a {
       color: $pantone;
       text-decoration: none;
+      display: block;
+      margin-top: 5px;
     }
 
     .more-link {
