--- a/source/themes/custom/campbell/styles/base/_variables.scss
+++ b/source/themes/custom/campbell/styles/base/_variables.scss
@@ -50,6 +50,7 @@ $icon-base-path: '../../campbell/icons';
 
 /****** breakpoint ******/
 $mobile: 359px;
+$mobile-sm: 576px;
 $tablet: 766.9px;
 $tablet-max: 959px;
 $desktop: 1367px;
