--- a/source/themes/custom/campbell/styles/components/_footer.scss
+++ b/source/themes/custom/campbell/styles/components/_footer.scss
@@ -21,7 +21,13 @@
     }
   }
 
+  .views-exposed-form,
   .search-block-form {
+    h2 {
+      display: none;
+    }
+
+    .form-item-search,
     .form-type-search {
       background: url('#{$image-base-path}/campbell_search_footer.png') left top no-repeat;
       width: 190px;
