--- a/source/themes/custom/campbell/styles/components/_imports.scss
+++ b/source/themes/custom/campbell/styles/components/_imports.scss
@@ -29,4 +29,9 @@
 'privacy-policy',
 'companion-brands',
 'news',
-'video-gallery';
+'video-gallery',
+'product-search',
+'multisite-featured-search',
+'markets-search',
+'news-search',
+'page-search';
