--- a/docroot/themes/custom/campbell/templates/node/node--news--search-index.html.twig
+++ b/docroot/themes/custom/campbell/templates/node/node--news--search-index.html.twig
@@ -76,10 +76,16 @@
   ]
 %}
 
-<div class="related-products">
-  <a href={{ url }}>
-    <span class="lable">{{ label }}</span>
+<div class="news-search-card">
+  <span class="lable">
+    {{ label }}
+  </span>
+
+  <a href={{ url }} class="body">
     {{ content.body }}
-    {{ 'Read More' }}
+  </a>
+
+  <a href={{ url }} class="read-more">
+    {{ 'Read More' | t }}
   </a>
 </div>
