--- a/docroot/themes/custom/campbell/templates/views/views-view--campbell_news--campbell_news_release.html.twig
+++ b/docroot/themes/custom/campbell/templates/views/views-view--campbell_news--campbell_news_release.html.twig
@@ -39,71 +39,69 @@
   {% set content_classes = content_classes|merge(['view-empty']) %}
 {% endif %}
 
-
-<div class="wrapper-content">
-  {%
-    set classes = [
-      'view',
-      'view-' ~ id|clean_class,
-      'view-id-' ~ id,
-      'view-display-id-' ~ display_id,
-      dom_id ? 'js-view-dom-id-' ~ dom_id,
-    ]
-  %}
-  <div{{ attributes.addClass(classes) }}>
-    <div class="page-title">
-      {{ view.title }}
+{%
+  set classes = [
+    'view',
+    'view-' ~ id|clean_class,
+    'view-id-' ~ id,
+    'view-display-id-' ~ display_id,
+    dom_id ? 'js-view-dom-id-' ~ dom_id,
+    'wrapper-content',
+  ]
+%}
+<div{{ attributes.addClass(classes) }}>
+  <div class="page-title">
+    {{ view.title }}
+  </div>
+  {% if exposed %}
+    <div class="view-filters tab-filters">
+      {{ exposed }}
     </div>
-    {% if exposed %}
-      <div class="view-filters tab-filters">
-        {{ exposed }}
-      </div>
-    {% endif %}
+  {% endif %}
 
-    {% if attachment_before %}
-      <div class="attachment attachment-before">
-        {{ attachment_before }}
-      </div>
-    {% endif %}
+  {% if attachment_before %}
+    <div class="attachment attachment-before">
+      {{ attachment_before }}
+    </div>
+  {% endif %}
 
-    <div class="view-container">
-      <div class="view-header">
-        {% if header %}
-          {{ header }}
-        {% endif %}
-      </div>
-      <div{{ content_attributes.addClass(content_classes) }}>
-        {% if rows %}
-          {{ rows }}
-        {% elseif empty %}
-          {{ empty }}
-        {% endif %}
-      </div>
-
-      {% if pager %}
-        {{ pager }}
+  <div class="view-container">
+    <div class="view-header">
+      {% if header %}
+        {{ header }}
+      {% endif %}
+    </div>
+    <div{{ content_attributes.addClass(content_classes) }}>
+      {% if rows %}
+        {{ rows }}
+      {% elseif empty %}
+        {{ empty }}
       {% endif %}
     </div>
 
-    {% if attachment_after %}
-      <div class="attachment attachment-after">
-        {{ attachment_after }}
-      </div>
-    {% endif %}
-    {% if more %}
-      {{ more }}
-    {% endif %}
-
-
-    {% if footer %}
-      <div class="view-footer">
-        {{ footer }}
-      </div>
-    {% endif %}
-    {% if feed_icons %}
-      <div class="feed-icons">
-        {{ feed_icons }}
-      </div>
+    {% if pager %}
+      {{ pager }}
     {% endif %}
   </div>
+
+  {% if attachment_after %}
+    <div class="attachment attachment-after">
+      {{ attachment_after }}
+    </div>
+  {% endif %}
+  {% if more %}
+    {{ more }}
+  {% endif %}
+
+
+  {% if footer %}
+    <div class="view-footer">
+      {{ footer }}
+    </div>
+  {% endif %}
+  {% if feed_icons %}
+    <div class="feed-icons">
+      {{ feed_icons }}
+    </div>
+  {% endif %}
 </div>
