--- a/source/themes/custom/campbell/styles/components/_warranty.scss
+++ b/source/themes/custom/campbell/styles/components/_warranty.scss
@@ -90,14 +90,6 @@
               margin: 0 0 35px;
             }
 
-            h4 {
-              font-size: 16px;
-              font-weight: 700;
-              margin: 0 0 25px;
-              color: $lighter-gray;
-              text-decoration: underline;
-            }
-
             p {
               margin: 5px 0;
 
@@ -118,5 +110,14 @@
         }
       }
     }
+  }
+}
+
+#block-contactcampbell {
+  h4 {
+    font-size: 16.94px;
+    color: $black;
+    font-weight: bold;
+    margin-bottom: 5px;
   }
 }
