Apex-104: Searhc filder button hide css updated.

--- a/source/themes/custom/campbell/styles/components/_header.scss
+++ b/source/themes/custom/campbell/styles/components/_header.scss
@@ -183,7 +183,7 @@
 }
 
 // Search form.
-.views-exposed-form,
+.header .top-page .views-exposed-form,
 .search-block-form  {
   position: relative;
 
