Revert "Apex-104: Searhc filder button hide css updated. (pull request #344)"

--- a/source/themes/custom/campbell/styles/components/_header.scss
+++ b/source/themes/custom/campbell/styles/components/_header.scss
@@ -183,7 +183,7 @@
 }
 
 // Search form.
-.header .top-page .views-exposed-form,
+.views-exposed-form,
 .search-block-form  {
   position: relative;
 
