--- a/source/themes/custom/campbell/styles/components/_header.scss
+++ b/source/themes/custom/campbell/styles/components/_header.scss
@@ -203,17 +203,27 @@
       left: 5px;
       right: 0;
       width: 143px;
-      height: 10px;
       margin: auto;
       border: 0;
-      padding: 1px;
+      padding: 1px 6px;
       font-size: 10px;
       color: $black;
     }
   }
+}
 
+.form-item-search,
+.search-block-form {
   .form-actions {
     display: none;
+  }
+}
+
+#views-exposed-form-acquia-product-search-solr-product-search {
+  .form-item-search + .form-wrapper {
+    .form-submit {
+      display: none;
+    }
   }
 }
 
