--- a/source/themes/custom/campbell/styles/components/_news-search.scss
+++ b/source/themes/custom/campbell/styles/components/_news-search.scss
@@ -6,6 +6,7 @@
   position: relative;
   transition: all 0.3s ease;
   outline: 2px solid transparent;
+  border: solid 1px $gray;
 
   a {
     text-decoration: none;
@@ -60,7 +61,7 @@
 
   &:hover,
   &:focus {
-    outline-color: $black;
+    outline-color: $pantone;
     box-shadow: 0 0 16px 5px rgba($color: $black, $alpha: 0.2);
   }
 }
