APEX-272: Issue fixes

--- a/docroot/themes/custom/campbell/templates/block/block--bundle--media-block.html.twig
+++ b/docroot/themes/custom/campbell/templates/block/block--bundle--media-block.html.twig
@@ -39,7 +39,7 @@
   {% endif %}
   {{ title_suffix }}
   {% block content %}
-    <a href="{{ content.field_link.0['#url'] }}" target="_blank">
+    <a href="{{ content.field_link.0['#url'] }}">
     {{ content.field_image }}
     </a>
   {% endblock %}
