--- a/source/themes/custom/gearwrench/styles/base/_base.scss
+++ b/source/themes/custom/gearwrench/styles/base/_base.scss
@@ -200,3 +200,17 @@ body.toolbar-loading .toolbar-tray {
     margin-left: 250px;
   }
 }
+
+//hide country dropdown and search
+.path-sitemap {
+	ul {
+		li {
+			&:has(.country-toggle) {
+				display: none;
+			}
+			&:has(.search-toggle) {
+				display: none;
+			}
+		}
+	}
+}
