--- a/source/themes/custom/campbell/styles/components/_news-search.scss
+++ b/source/themes/custom/campbell/styles/components/_news-search.scss
@@ -63,5 +63,9 @@
   &:focus {
     outline-color: $pantone;
     box-shadow: 0 0 16px 5px rgba($color: $black, $alpha: 0.2);
+
+    .read-more {
+      background-color: $pantone;
+    }
   }
 }
