--- a/source/themes/custom/campbell/styles/components/_brand-timeline.scss
+++ b/source/themes/custom/campbell/styles/components/_brand-timeline.scss
@@ -16,6 +16,7 @@
         border: 0;
         padding: 0;
         overflow: unset;
+        max-height: unset;
 
         &::after {
           content: '';
@@ -33,6 +34,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      background: url('#{$image-base-path}/brand_timeline_banr.png') left top repeat-x $dark-spring-green;
     }
 
     .form-type-radio {
@@ -45,17 +47,17 @@
 
         &:checked + label {
           display: block;
-          background-color: $pantone;
+          background: $black;
           color: $white;
 
           &.ajax-load-class {
-            color: $spanish-gray;
-            background: $white;
+            color: $white;
+            background: url('#{$image-base-path}/brand_timeline_banr.png') left top repeat-x $dark-spring-green;
           }
         }
 
         &.active + label {
-          background-color: $pantone;
+          background: $black;
           color: $white;
         }
       }
@@ -64,14 +66,129 @@
         font-size: 20px;
         font-weight: $bold;
         line-height: 24px;
-        color: $spanish-gray;
-        background: $white;
+        color: $white;
+        background: url('#{$image-base-path}/brand_timeline_banr.png') left top repeat-x $dark-spring-green;
         padding: 10px 20px;
         cursor: pointer;
 
         &.ajax-load-class {
-          color: $spanish-gray;
-          background: $white;
+          color: $white;
+          background: url('#{$image-base-path}/brand_timeline_banr.png') left top repeat-x $dark-spring-green;
+        }
+      }
+    }
+    // Select filter for responsive.
+    @media only screen and (max-width: $tablet) {
+      left: 70% !important;
+
+      &.select-view {
+        .form-type-radio {
+          label {
+            width: 100%;
+            font-size: 16px;
+          }
+        }
+      }
+    }
+    @media only screen and  (min-width: $tablet-max) {
+      &.select-view {
+        display: none;
+      }
+    }
+    @media only screen and (max-width: $tablet-max) {
+      display: inline-block;
+      margin-bottom: 30px;
+      position: relative;
+      top: 0;
+      left: 86%;
+
+      &.tab-view {
+        display: none;
+      }
+
+      &.select-view {
+        .form-radios {
+          flex-direction: column;
+        }
+
+        .form-type-radio {
+          label {
+            width: 100%;
+            padding: 5px 15px;
+          }
+        }
+
+        .menu-label {
+          position: absolute;
+          left: -90%;
+          top: 25%;
+          font-size: 16px;
+        }
+
+        .menu-block,
+        .menu-trigger {
+          background: $pantone;
+          color: $white;
+          cursor: pointer;
+          top: -30px;
+        }
+
+        .menu-block {
+          font-size: 20px;
+          font-weight: bold;
+          display: block;
+          padding: 5px 15px;
+          cursor: auto;
+          width: 100px;
+          background: $pantone;
+          color: $white;
+          position: relative;
+          top: 0;
+          @media only screen and (max-width: $tablet) {
+            font-size: 16px;
+          }
+        }
+
+        .menu-trigger {
+          text-decoration: none;
+          width: 30px;
+          height: 38px;
+          background: url('#{$image-base-path}/accord_arrow_down.png') left center no-repeat;
+          background-size: 20px 10px;
+          position: absolute;
+          top: 0;
+          right: 0;
+          z-index: 8;
+          filter: brightness(0) invert(1);
+          @media only screen and (max-width: $tablet) {
+            height: 34px;
+          }
+
+          &.active {
+            transform: rotate(180deg);
+            background-position: right;
+          }
+        }
+
+        .menu-dropdown {
+          position: absolute;
+          z-index: 10;
+          top: 33px;
+          left: 0;
+          min-width: 100%;
+          width: 100%;
+          display: none;
+
+          &.open {
+            display: block;
+
+            .entypo-down-open {
+              background: url('#{$image-base-path}/accord_arrow_up.png') left top no-repeat;
+            }
+          }
+          @media only screen and (max-width: $tablet) {
+            top: 27px;
+          }
         }
       }
     }
@@ -82,14 +199,19 @@
     @media only screen and (min-width: $tablet-max) {
       width: 800px;
     }
+    @media only screen and (max-width: $tablet-max) {
+      width: 500px;
+    }
+    @media only screen and (max-width: $tablet) {
+      width: 315px;
+    }
 
     .b-content {
       min-height: 400px;
-      border: 0.5px solid $pantone;
-      margin-right: 16px;
+      border: 3px solid $pantone;
+      margin: 0 16px;
       @media only screen and (max-width: $tablet) {
-        margin-right: 0;
-        width: 300px;
+        margin: 0;
       }
 
       &__image {
@@ -105,7 +227,7 @@
           background-color: $pantone;
           color: $white;
           font-size: 20px;
-          padding: 5px;
+          padding: 5px 10px;
         }
 
         img {
@@ -131,13 +253,18 @@
   }
 }
 
-.slick-prev,
-.slick-next {
-  display: block !important;
-  visibility: visible !important;
-  opacity: 1 !important;
+// Hide ajax loader
+.ajax-progress-fullscreen {
+  display: none;
 }
 
+// Fixed responsive width issue.
+.slick-list {
+  max-width: 100vw;
+  width: 100%;
+}
+
+// Added custom arrow.
 .slick-arrow {
   width: 36px !important;
   height: 36px !important;
@@ -146,14 +273,23 @@
   position: absolute;
   z-index: 6;
   top: 38%;
+  @media only screen and (max-width: $tablet) {
+    top: 45%;
+  }
 
   &.slick-prev {
     background: $white url('#{$image-base-path}/back.png') 12px 9px no-repeat;
-    left: -20px;
+    left: 25px;
+    @media only screen and (max-width: $tablet) {
+      left: -10px;
+    }
   }
 
   &.slick-next {
     background: $white url('#{$image-base-path}/next.png') 14px 9px no-repeat;
-    right: -5px;
+    right: 25px;
+    @media only screen and (max-width: $tablet) {
+      right: -10px;
+    }
   }
 }
