--- a/source/themes/custom/campbell/styles/components/_page-search.scss
+++ b/source/themes/custom/campbell/styles/components/_page-search.scss
@@ -6,6 +6,7 @@
   position: relative;
   transition: all 0.3s ease;
   outline: 2px solid transparent;
+  border: solid 1px $gray;
 
   a,
   span {
@@ -63,5 +64,9 @@
   &:focus {
     outline-color: $black;
     box-shadow: 0 0 16px 5px rgba($color: $black, $alpha: 0.2);
+
+    .read-more {
+      background-color: $pantone;
+    }
   }
 }
