APEX-416: Hide the arrow for lasta and first slide.

--- a/source/themes/custom/campbell/styles/components/_brand-timeline.scss
+++ b/source/themes/custom/campbell/styles/components/_brand-timeline.scss
@@ -277,6 +277,10 @@
     top: 45%;
   }
 
+  &.disabled {
+    display: none;
+  }
+
   &.slick-prev {
     background: $white url('#{$image-base-path}/back.png') 12px 9px no-repeat;
     left: 25px;
