APEX-146: Button style for featured product instapag

--- a/source/themes/custom/campbell/styles/base/_button.scss
+++ b/source/themes/custom/campbell/styles/base/_button.scss
@@ -71,3 +71,30 @@
     line-height: 22px;
   }
 }
+
+// Button for featured product instapage
+.sling.hooks,
+.swivel-hoisthooks,
+.eye-hoist-hooks {
+  text-decoration: none;
+  color: $white;
+  padding: 15px;
+  border-radius: 5px;
+
+  &:hover {
+    text-decoration: none;
+    background-color: $spanish-gray;
+  }
+}
+
+.sling.hooks {
+  background-color: $pantone;
+}
+
+.swivel-hoisthooks {
+  background-color: $sinopia;
+}
+
+.eye-hoist-hooks {
+  background-color: $lapis-lazuli;
+}
