--- a/source/themes/custom/campbell/styles/base/_layout.scss
+++ b/source/themes/custom/campbell/styles/base/_layout.scss
@@ -20,6 +20,10 @@ body.user-logged-in {
   @media only screen and (min-width: $tablet-max) {
     width: 1000px;
   }
+
+  .wrapper-content {
+    width: unset;
+  }
 }
 
 .px-0 {
