APEX-146: Fixed Build issue

--- a/source/themes/custom/campbell/styles/base/_variables.scss
+++ b/source/themes/custom/campbell/styles/base/_variables.scss
@@ -31,6 +31,8 @@ $aero-blue: #BDE9CB;
 $table-even: #F0F0F0;
 $table-border: #D8D8D8;
 $racing-red: #CC0000;
+$sinopia: #D3461F;
+$lapis-lazuli: #00599C;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
