APEX-416: Implemented the single click trigger.

--- a/source/themes/custom/campbell/styles/components/_featured-detail-page.scss
+++ b/source/themes/custom/campbell/styles/components/_featured-detail-page.scss
@@ -66,17 +66,17 @@
     }
   }
 
-  .headline,
-  .headline p {
+  .headline {
     font-size: 28px;
     font-weight: $bold;
     font-style: italic;
     margin-bottom: 10px;
-    color: $black;
+    color: $pantone;
     line-height: 36px;
 
-    strong {
-      font-size: 28px;
+    .field--name-field-headline h2 {
+      font-size: 24px;
+      color: $black;
     }
   }
 }
@@ -107,8 +107,13 @@
     font-weight: $bold;
     font-style: italic;
     margin-bottom: 10px;
-    color: $black;
+    color: $pantone;
     line-height: 36px;
+
+    .field--name-field-headline h2 {
+      font-size: 24px;
+      color: $black;
+    }
   }
 }
 
