--- a/source/themes/custom/campbell/styles/components/_page-search.scss
+++ b/source/themes/custom/campbell/styles/components/_page-search.scss
@@ -15,7 +15,8 @@
   }
 
   .lable,
-  .title {
+  .title,
+  p {
     padding: 16px;
   }
 
@@ -62,7 +63,7 @@
 
   &:hover,
   &:focus {
-    outline-color: $black;
+    outline-color: $pantone;
     box-shadow: 0 0 16px 5px rgba($color: $black, $alpha: 0.2);
 
     .read-more {
