APS-90 css-fix-for-tiktok-social-icon

--- a/source/themes/custom/crescenttool/styles/libraries/region/footer.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/region/footer.scss
@@ -117,7 +117,7 @@ $footer-bp-mobile: '<sm';
       }
 
       @include media('>lg-plus') {
-        max-width: rem(150px);
+        max-width: unset;
       }
     }
 
