--- a/docroot/themes/custom/campbell/templates/node/node--news--full.html.twig
+++ b/docroot/themes/custom/campbell/templates/node/node--news--full.html.twig
@@ -82,7 +82,7 @@
   <div class="news-detail__top">
     <div class="left-block">
       <div class="date-formate">
-        <span class="date">{{ content.field_date['#items'].value | date('M j') }}</span>
+        <span class="date">{{ content.field_date['#items'].value | date('F j') }}</span>
         <span class="year">{{ content.field_date['#items'].value | date('Y') }}</span>
       </div>
       {% if content.field_news_release_document.0 is not empty %}
