--- a/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
@@ -444,20 +444,25 @@ $tabs-border-width-active: rem(5px);
                 border: 0;
                 float: none;
 
-                .ps-review-details {
-                  background: none;
+                .ps-review {
+                  display: unset;
+                  float: left;
 
-                  @include media('<sm') {
-                    margin-left: 0;
+                  .ps-review-details {
+                    background: none;
+
+                    @include media('<sm') {
+                      margin-left: 0;
+                    }
                   }
-                }
 
-                .ps-review-count,
-                .ps-review-average {
-                  @include type-header(h5);
-                  color: $black;
-                  font-family: $font-brand;
-                  font-weight: $fw-bold;
+                  .ps-review-count,
+                  .ps-review-average {
+                    @include type-header(h5);
+                    color: $black;
+                    font-family: $font-brand;
+                    font-weight: $fw-bold;
+                  }
                 }
               }
             }
