--- a/docroot/themes/custom/cleco/src/scss/base/_base.scss
+++ b/docroot/themes/custom/cleco/src/scss/base/_base.scss
@@ -57,9 +57,9 @@ html.is-captive {
 }
 
 .contain {
-    max-width: 1220px;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 1220px !important;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .text-center {
