APEX-334: Contact form link color added and removed link form image on news listing

--- a/source/themes/custom/campbell/styles/components/_contact.scss
+++ b/source/themes/custom/campbell/styles/components/_contact.scss
@@ -145,6 +145,14 @@
     }
   }
 
+  .form-type-processed-text {
+    a {
+      font-size: 12px;
+      text-decoration: underline;
+      color: $pantone;
+    }
+  }
+
   .captcha  {
     border: 0;
 
