--- a/docroot/themes/custom/cleco/src/scss/components/_tabs.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_tabs.scss
@@ -63,6 +63,7 @@
 .tabs--pill {
     padding-bottom: 1rem;
     margin-bottom: 2rem;
+    background-color: $color-white;
 
     .tab {
         font-size: 1rem;
@@ -85,7 +86,7 @@
         &,
         &:hover {
             background: $color-orange;
-            color: #fff;
+            color: $color-white;
         }
     }
 
