APEX-402: Fixed the solution subpage bugs

--- a/docroot/themes/custom/cleco/src/scss/components/_media-block.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_media-block.scss
@@ -23,6 +23,13 @@
             min-width: 24rem;
             max-width: 48rem;
         }
+
+        &:not(.media-block--alt) {
+          .video-thumb-play {
+            left: unset;
+            right: -12%;
+          }
+        }
     }
 
     .media-block-media {
