APEX-368: Fixed the width and spacing issues

--- a/docroot/themes/custom/cleco/src/scss/base/_typography.scss
+++ b/docroot/themes/custom/cleco/src/scss/base/_typography.scss
@@ -121,8 +121,9 @@ blockquote {
 %pre,
 .pre,
 pre {
-  white-space: pre;
+  white-space: pre-wrap;
   background: $color-accent-bg;
+  color: $color-gray-medium;
   padding: 1em;
   margin-bottom: 1em;
 }
