--- a/docroot/themes/custom/cleco/src/scss/pages/enhanced-product/_enhanced-product-hero.scss
+++ b/docroot/themes/custom/cleco/src/scss/pages/enhanced-product/_enhanced-product-hero.scss
@@ -46,10 +46,9 @@
   }
 
   .contain {
-    width: 100%;
-    max-width: 100%;
+    width: 100% !important;
+    max-width: 100% !important;
     position: relative;
-    // z-index: 30;
     background-color: $color-off-black;
 
     .video-thumb {
@@ -61,7 +60,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      // z-index: 100;
     }
 
     .play-button {
