--- a/docroot/themes/custom/cleco/src/scss/pages/enhanced-product/_enhanced-product.scss
+++ b/docroot/themes/custom/cleco/src/scss/pages/enhanced-product/_enhanced-product.scss
@@ -409,7 +409,7 @@
 
   .contain {
     max-width: 800px;
-    max-width: 50rem;
+    max-width: 50rem !important;
     top: 100px;
     opacity: 0;
 
@@ -478,7 +478,7 @@
   }
 
   .contain {
-    max-width: 720px;
+    max-width: 720px !important;
     transition: all 0.8s ease;
     position: relative;
     // top: 125px;
