feature/APEX-333: CLECO- code improvement

--- a/docroot/themes/custom/atg/templates/products/single.html.twig
+++ b/docroot/themes/custom/atg/templates/products/single.html.twig
@@ -135,7 +135,7 @@
                         {% endfor %}
                     </ul>
                     {% if hasDownloads == false %}
-                        <p>Currently there are no downloads available for this product.</p>
+                        <p>{{ 'Currently there are no downloads available for this product.'|t }}</p>
                     {% endif %}
                 </tab>
             {% endif %}
