APS-99 fixed-type-navigator-issue

--- a/source/themes/custom/gearwrench/styles/libraries/view/media-pages.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/media-pages.scss
@@ -148,6 +148,7 @@
           justify-content: space-between;
 
           &::after {
+            margin-left: 84px;
             transform: rotate(90deg);
           }
         }
