--- a/source/themes/custom/crescenttool/styles/libraries/view/media-pages.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/view/media-pages.scss
@@ -157,6 +157,7 @@
           justify-content: space-between;
 
           &::after {
+            margin-left: 84px;
             transform: rotate(90deg);
           }
         }
