APEX-333: Fixed the icon and width issue

--- a/docroot/themes/custom/cleco/src/scss/components/_listing.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_listing.scss
@@ -77,7 +77,7 @@ a.listing {
   align-items: center;
   justify-content: center;
   background: $color-accent-bg;
-  max-height: map-get($listing-image-height-map, default);
+  height: map-get($listing-image-height-map, default);
   width: 100%;
 }
 
