--- a/docroot/themes/custom/cleco/src/scss/pages/enhanced-product/_enhanced-product.scss
+++ b/docroot/themes/custom/cleco/src/scss/pages/enhanced-product/_enhanced-product.scss
@@ -408,7 +408,7 @@
   }
 
   .contain {
-    max-width: 800px;
+    min-width: 800px;
     max-width: 50rem !important;
     top: 100px;
     opacity: 0;
