APEX-367: Fixed the related product and 360deg product list order

--- a/docroot/themes/custom/cleco/src/scss/_hacks.scss
+++ b/docroot/themes/custom/cleco/src/scss/_hacks.scss
@@ -41,6 +41,7 @@
 .basic-cards-slider--init {
   .basic-cards > div {
     display: inline-flex;
+    flex-direction: row-reverse;
   }
 
   .basic-cards > div > div {
