--- a/docroot/themes/custom/atg/advanced-selector/css/responsive.css
+++ b/docroot/themes/custom/atg/advanced-selector/css/responsive.css
@@ -10,7 +10,7 @@
 @media only screen and (max-width: 1024px) {
   .contain {
     width: 100% !important;
-    min-width: 100%;
+    min-width: 100% !important;
   }
   .sel-hd {
     padding: 1em;
