APEX-114: Fixed the image and responsive issue

--- a/docroot/themes/custom/cleco/src/scss/base/_tables.scss
+++ b/docroot/themes/custom/cleco/src/scss/base/_tables.scss
@@ -70,6 +70,10 @@ thead {
   th[colspan] {
     padding-bottom: 0;
   }
+
+  th {
+    padding: 0.75em;
+  }
 }
 
 /*
@@ -80,8 +84,11 @@ tbody {
   th {
     color: $color-off-black;
   }
-}
 
+  td {
+    padding: 0.75em;
+  }
+}
 
 /*
 * TABLE FOOTER
