--- a/docroot/themes/custom/cleco/src/scss/components/_comparison-table.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_comparison-table.scss
@@ -4,8 +4,14 @@
   }
 
   .table-component__table__body {
-    tr:hover {
-      cursor: pointer;
+    tr {
+      td {
+        padding: 0.75em !important;
+      }
+
+      &:hover {
+        cursor: pointer;
+      }
     }
 
     tr:hover,
@@ -15,6 +21,9 @@
   }
 
   // Shrink checkbox column
+  .table-component__th {
+    padding: 0.75em !important;
+  }
   .table-component__th[aria-disabled='true'] {
     white-space: nowrap;
     width: 1px;
