--- a/docroot/themes/custom/cleco/src/scss/base/_tables.scss
+++ b/docroot/themes/custom/cleco/src/scss/base/_tables.scss
@@ -72,7 +72,7 @@ thead {
   }
 
   th {
-    padding: 0.75em;
+    padding: 0.75em !important;
   }
 }
 
@@ -86,7 +86,7 @@ tbody {
   }
 
   td {
-    padding: 0.75em;
+    padding: 0.75em !important;
   }
 }
 
